--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>sapa-app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>sapa-app</name>
+    <description>sapa-app</description>
     <url/>
     <licenses>
         <license/>
@@ -75,11 +76,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.8.3</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springdoc</groupId>-->
+<!--            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
+<!--            <version>2.8.3</version>-->
+<!--        </dependency>-->
 <!--        <dependency>-->
 <!--            <groupId>software.amazon.awssdk</groupId>-->
 <!--            <artifactId>rekognition</artifactId>-->
