--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=sapa
 
+spring.profiles.active=dev
+
 spring.datasource.url=jdbc:mysql://localhost:3306/sapa?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=***
-spring.datasource.password=***
+spring.datasource.username=root
+spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
